--- a/Assignment1/alembic.ini
+++ b/Assignment1/alembic.ini
@@ -5,3 +5,36 @@ sqlalchemy.url = mysql+asyncmy://medisolve:medisolve@localhost:29906/medisolve
 
 [logging]
 level = INFO
+
+[loggers]
+keys = root,sqlalchemy,alembic
+
+[handlers]
+keys = console
+
+[formatters]
+keys = generic
+
+[formatter_generic]
+format = %(levelname)s %(asctime)s %(name)s %(message)s
+datefmt = %Y-%m-%d %H:%M:%S
+
+[handler_console]
+class = StreamHandler
+args = (sys.stdout,)
+level = INFO
+formatter = generic
+
+[logger_root]
+level = INFO
+handlers = console
+
+[logger_sqlalchemy]
+level = WARN
+handlers = console
+qualname = sqlalchemy.engine
+
+[logger_alembic]
+level = INFO
+handlers = console
+qualname = alembic
