--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "httpx>=0.27.0",
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
-    "asyncmy>=0.2.9"
+    "asyncmy>=0.2.9",
+    "cryptography>=42.0.0"
 ]
 
 [project.optional-dependencies]
